[gd_scene load_steps=2 format=3 uid="uid://cxa1u0tdkb18h"]

[ext_resource type="Script" uid="uid://ctnmnvej2sp51" path="res://UI/noray_lobby_ui.gd" id="1_bxyrb"]

[node name="NorayLobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxyrb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OID" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 89.0
offset_right = 2.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -50.0
offset_right = 106.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="CopyOID" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Coppy Lobby Code"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OID Input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Lobby Code"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join
"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/CopyOID" to="." method="_on_copy_oid_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
